# e-footprint

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  System footprints.html  device_population_fab_footprint_calculus_graph.html  full_quickstart_system_calculation_graph.html  index.html  mkdocs.yml  object_relationships_graph.html  pyproject.toml  quickstart.ipynb  quickstart.py  requirements-dev.txt  requirements.txt  setup.py
Autoscaling/: index.html
Changelog/: index.html
Country/: index.html
DevicePopulation/: index.html
Hardware/: index.html
Job/: index.html
Network/: index.html
OnPremise/: index.html
Serverless/: index.html
Service/: index.html
Storage/: index.html
System/: index.html
UsagePattern/: index.html
UserJourney/: index.html
UserJourneyStep/: index.html
api/: system_to_json.py
best_practices/: index.html
build_process/: index.html
builders/: index.html
calculus_graphs/: active_storage_required.html  all_services_ram_needs.html  available_ram_per_instance.html  device_population_energy_footprint.html  device_population_instances_fabrication_footprint.html  device_population_power.html  duration.html  energy_footprint.html  nb_of_active_instances.html  nb_of_idle_instances.html  network_data_download.html  network_data_upload.html  network_energy_footprint.html  on_premise_server_all_services_cpu_needs.html  on_premise_server_all_services_ram_needs.html  on_premise_server_available_cpu_per_instance.html  on_premise_server_available_ram_per_instance.html  on_premise_server_nb_of_instances.html  on_premise_server_raw_nb_of_instances.html  power.html  server_all_services_cpu_needs.html  server_all_services_ram_needs.html  server_available_cpu_per_instance.html  server_available_ram_per_instance.html  server_energy_footprint.html  server_fraction_of_time_in_use.html  server_instances_energy.html  server_instances_fabrication_footprint.html  server_instances_power.html  server_nb_of_instances.html  server_raw_nb_of_instances.html  serverless_all_services_ram_needs.html  serverless_available_cpu_per_instance.html  serverless_available_ram_per_instance.html  serverless_energy_footprint.html  serverless_fraction_of_time_in_use.html  serverless_instances_energy.html  serverless_instances_fabrication_footprint.html  serverless_instances_power.html  serverless_nb_of_instances.html  (+36 more)
docs_sources/: .gitignore  (+2 more)
(+455 files in other folders)
