# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.poetry]
name = "efootprint"
version = "1.1.5"
description = "Digital service environmental footprint model"
authors = ["Vincent Villet for Publicis Sapient"]
readme = "README.md"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | __pychache__
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
pint = '0.22'
matplotlib = '3.8.0'
pytz = '2023.3.post1'
pyvis = '0.3.2'
plotly = '5.18'
pandas = '2.1'
requests = '2.31'

[tool.poetry.group.dev.dependencies]
pytest = '*'
pytest-cov = '*'
jupyter = "^1.0.0"
