# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.poetry]
name = "efootprint"
version = "1.3.2"
description = "Digital service environmental footprint model"
authors = ["Vincent Villet for Publicis Sapient"]
readme = "README.md"
include = ["efootprint/constants/custom_units.txt"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | __pychache__
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
pint = '0.23'
matplotlib = '3.8'
pytz = '2024.1'
pyvis = '0.3.2'
plotly = '5.19'
pandas = '2.2'
requests = '2.31'

[tool.poetry.group.dev.dependencies]
pytest = '*'
pytest-cov = '*'
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
mkdocs-material = "*"
pymdown-extensions = "*"
jinja2 = "*"
nbconvert = "*"
pretty-jupyter = "*"
"ruamel.yaml" = "0.18.6"